# jacabot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pkg-list
jacabot/: CMakeLists.txt  package.xml
jacabot/src/: low_level_control.py
jacabot_control_center/: package-lock.json
jacabot_description/: CMakeLists.txt  package.xml
jacabot_description/config/: diff_drive_controller.yaml  gamepad_config.yaml
jacabot_description/gazebo/: jacabot_materials.gazebo  jacabot_physics.gazebo  jacabot_plugins.gazebo
jacabot_description/meshes/: ball_caster.dae  ball_caster_1.stl  camera_1.stl  front_ball_caster.stl  gas_sensor.stl  imu.stl  left_wheel.stl  left_wheel_1.stl  lidar.stl  lidar_1.stl  rear_ball_caster.stl  right_wheel.stl  right_wheel_1.stl  temp_sensor.stl  wheel_80mm.dae
jacabot_description/urdf/: jacabot.gazebo  jacabot.gazebo.bak  jacabot.trans  jacabot.urdf  jacabot.xacro  materials.xacro  materials.xacro.bak
jacabot_gazebo/: CMakeLists.txt  package.xml
jacabot_server/: control .html  control .html.bak  control-test.html  dashboard.html  index.html
jacabot_simulation/: CMakeLists.txt  package.xml
jacabot_simulation/config/: pad.yaml
jacabot_simulation/launch/: .building_gazebo.launch.swp  controller.launch  controller.yaml  display.launch  gamepad.launch  gazebo.launch  gazebo_empty_world.launch  gazebo_office_small_teleop.launch  pad.launch  rviz.launch
jacabot_simulation/models/2LeggedBot/: model.config  model.sdf
jacabot_simulation/models/Building1/: model.config  model.sdf
jacabot_simulation/models/house_2/: model.sdf
(+30 files in other folders)
