<?xml version="1.0"?>
<package format="2">
  <name>jacabot_description</name>
  <version>1.0.0</version>
  <description>The jacabot_description package</description>
  <maintainer email="karol.orlamowski@gmail.com">Karol Orlamowski</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>



  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>